--- a/aksum/index.html
+++ b/aksum/index.html
@@ -1,1 +1,40 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>University Map</title>
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    
+    <link rel="stylesheet" href="../common/main-style.css">
+</head>
+<body>
+
+    <div id="map"></div>
+
+    <div class="location-btn" onclick="toggleTracking()">
+        <img src="https://cdn-icons-png.flaticon.com/512/854/854866.png" alt="GPS">
+    </div>
+
+    <div id="drawer">
+        <span class="close-drawer" onclick="closeDrawer()">&times;</span>
+        <div class="drawer-header" id="drawer-title">Building Name</div>
+        <div id="drawer-content">Details will appear here.</div>
+    </div>
+
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+    <script src="data.js"></script>
+
+    <script src="../common/main-logic.js"></script>
+
+    <script>
+        // Small helper function to close the drawer
+        function closeDrawer() {
+            document.getElementById('drawer').classList.remove('active');
+        }
+    </script>
+</body>
+</html>
