Change button to type='button' for close button

--- a/aksum/index.html
+++ b/aksum/index.html
@@ -20,7 +20,7 @@
 
 
     <div id="drawer" class="side-drawer">
-    <button class="close-btn" onclick="closeDrawer()">×</button>
+    <button type="button" class="close-btn" onclick="closeDrawer()">×</button>
     <h2 id="drawer-title"></h2>
     <div id="drawer-content"></div>
 </div>
